--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
             integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
             crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Online Store App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
